--- a/Master Apps/3rd task/index.html
+++ b/Master Apps/3rd task/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class="navbar"></div>
-        <div class="menu-left"></div>
-        <div class="content"></div>
-        <div class="menu-right"></div>
+<html lang="pl" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="car">
     </div>
-</body>
+    <div class="tree-container">
+      <div class="tree">
+      </div>
+    </div>
+  </body>
 </html>
